--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <nav class="topnav" id="myTopnav">
         <a class="nav-logo">Webshop</a>
         <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
+        <a href="Products.html">Products</a>
         <a href="about.html" class="active">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
